--- a/StocksApp/appsettings.json
+++ b/StocksApp/appsettings.json
@@ -9,5 +9,8 @@
   "TradingOptions": {
     "DefaultStockSymbol": "MSFT",
     "DefaultOrderQuantity":  100
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=StocksAppDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
   }
-}
+  }
