feat: Add configs to Serilog use Console, MSSqlServer and Seq

--- a/StocksApp/appsettings.json
+++ b/StocksApp/appsettings.json
@@ -13,5 +13,32 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=StocksAppDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.MSSqlServer",
+      "Serilog.Sinks.Seq"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=StocksAppLogs;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30",
+          "tableName": "logs",
+          "autoCreateSqlTable": true
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ]
   }
-  }
+}
